# hpp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
bedrock-api/: Cargo.toml
bedrock-api/src/: handlers.rs  integration_tests.rs  lib.rs  main.rs
bedrock-core/: Cargo.toml
bedrock-core/src/: embedding.rs  huggingface_embedding.rs  huggingface_tests.rs  integration_tests.rs  lib.rs  model_mappings.rs  service.rs  types.rs  vector_store.rs
examples/: huggingface_embeddings.rs
iam-api/: Cargo.toml
iam-api/src/: handlers.rs  lib.rs  main.rs  middleware.rs
iam-core/: Cargo.toml
iam-core/src/: auth.rs  lib.rs  policy.rs  types.rs  user.rs
s3-api/: Cargo.toml
s3-api/src/: auth.rs  handlers.rs  main.rs
s3-core/: Cargo.toml
s3-core/src/: lib.rs
s3-core/src/models/: mod.rs  service_models.rs
s3-core/src/services/: iam_service.rs  mod.rs  s3_service.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
shared/src/models/: mod.rs  s3_models.rs
shared/src/repository/: mod.rs  s3_repository.rs
