[workspace]
members = [
    "s3-core",
    "s3-api",
    "iam-core",
    "iam-api",
    "bedrock-core",
    "bedrock-api",
    "shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-sigv4 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
bytes = "1.0"
reqwest = { version = "0.12", features = ["json"] }

