[package]
name = "iam-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iam-api"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
iam-core = { path = "../iam-core" }
shared = { path = "../shared" }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
mockall = "0.12"