[package]
name = "iam-core"
version = "0.1.0"
edition = "2021"

[features]
testing = ["mockall", "shared/testing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }
mockall = { version = "0.12", optional = true }
bytes = "1.0"
async-trait = "0.1"