[package]
name = "s3-core"
version = "0.1.0"
edition = "2021"

[features]
testing = ["mockall"]

[dependencies]
shared = { path = "../shared" }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
mockall = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"